<resources>
    <string name="app_name">Nox Social</string>
    <string name="email_etc">someone@example.com</string>
    <string name="email">Email</string>
    <string name="username_etc">SocialNox</string>
    <string name="userName">Username</string>
    <string name="password_etc">*******</string>
    <string name="password">Password</string>
    <string name="newPassword">New Password</string>
    <string name="repassword">Retype Password</string>
    <string name="name">Full Name</string>
    <string name="bio">Biography</string>
    <string name="name_etc">John Luck</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="createAccount">Do not have an account? \n Sign up</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="changeProfile">Change Profile Photo</string>
    <string name="noPost">There is no post to display</string>
    <string name="postUpload">Which method do you choose to upload the post?</string>
    <string name="permissionGranted">Permission Granted!</string>
    <string name="permissionDenied">Permission Denied!</string>
    <string name="photoTitle">Upload new Photo</string>
    <string name="photoMessage">Capture a new Image or Choose from Gallery</string>
    <string name="capture">Capture Image</string>
    <string name="gallery">From Gallery</string>
    <string name="caption">Caption here...</string>
</resources>