<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/person"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/changeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/changeProfile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/light_blue_300"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/submit"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:tint="@color/light_blue_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeProfile">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emailIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:tint="@color/light_blue_300"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingVertical="16dp"
                android:paddingStart="48dp"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fNameIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:tint="@color/light_blue_300"
                app:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingVertical="16dp"
                android:paddingStart="48dp"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/lNameIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:tint="@color/light_blue_300"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingVertical="16dp"
                android:paddingStart="48dp"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bioIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="2dp"
                android:tint="@color/light_blue_300"
                app:srcCompat="@drawable/ic_baseline_format_bold_24" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingVertical="16dp"
                android:paddingStart="48dp"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>